@@ -3969,5 +3969,32 @@ class t3lib_BEfunc	{
 		}
 		return array('rows'=>$theRows,'list'=>$out);
 	}
+	
+	/**
+	 * Returns the name of the backend script relative to the TYPO3 main directory.
+	 *
+	 * @param	string		Name of the backend interface  (backend, backend_old, frontend) to look up the script name for. If no interface is given, the interface for the current backend user is used.
+	 * @return	string		The name of the backend script relative to the TYPO3 main directory.
+	 */
+	public static function getBackendScript($interface = '') {
+		if (!$interface) {
+			$interface = $GLOBALS['BE_USER']->uc['interfaceSetup'];
+		}
+		
+		switch ($interface) {
+			case 'backend_old':
+				$script = 'alt_main.php';
+				break;
+			case 'frontend':
+				$script = '../.';
+				break;
+			case 'backend':
+			default:
+				$script = 'backend.php';
+				break;
+		}
+		
+		return $script;
+	}
 }
 ?>
